<?xml version="1.0"?>
<package>
  <name>csv_logging</name>
  <version>0.0.1</version>
  <description>Simple odometry manipulation</description>
  <maintainer email="fkunz@sim.tu-darmstadt.de">Florian Kunz</maintainer>
  <license>BSD</license>

  <author email="fkunz@sim.tu-darmstadt.de">Florian Kunz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

</package>
