<?xml version="1.0"?>
<package>
  <name>header_manipulation</name>
  <version>0.0.1</version>
  <description>
    Allowing to manipulate header values for data streams of generic message types.
    The header_manipulation_node allows to add a time offset to each message header received an publishing it with a time delay.
    Both parameters can be changed with dynamic reconfigure.
  </description>
  <maintainer email="fkunz@sim.tu-darmstadt.de">Florian Kunz</maintainer>
  <license>BSD</license>

  <author email="fkunz@sim.tu-darmstadt.de">Florian Kunz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>topic_tools</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>

</package>
