<?xml version="1.0"?>
<package>
  <name>hector_reset_adapter</name>
  <version>0.0.0</version>
  <description>The hector_reset_adapter package serves as a relay and translator for the hector specific syscommand topic</description>

  <maintainer email="fkunz@sim.tu-darmstadt.de">Florian Kunz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
